# sloperator

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  bot_config.yaml  chatbot_lib.hpp  main.cpp  wyoming_lib.hpp
.github/workflows/: ci.yml
tests/: BUILD.bazel  test_chatbot.cpp
